--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,34 @@
 {
     "name": "dennisdigital/subscriptions-profile",
     "description": "Experimental Profile"
-}
+    "type": "drupal-profile",
+    "license": "GPL-2.0+",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
 
+    "extra": {
+        "patches": {
+        }
+    },
+
+    "require-dev": {
+        "drush/drush": "^9.0",
+        "drupal-composer/drupal-scaffold": "^2.0.0",
+        "phpunit/phpunit": "~4.8",
+        "squizlabs/php_codesniffer": "2.*",
+        "drupal/devel": "^1.0"
+    },
+
+    "require": {
+        "cweagans/composer-patches": "^1.5.0",
+        "composer/installers": "^1.0",
+        "drupal/core": "^8.1.0",
+        "drupal/ctools": "3.0-alpha26",
+        "drupal/config_update": "^1.1",
+        "drupal/metatag": "^1.0",
+        "drupal/token": "^1.0",
+        "drupal/pathauto": "^1.0",
+        "drupal/domain": "^1.0",
+        "drupal/paragraphs": "^1.0"
+    }
+}
