--- a/subscriptions.info.yml
+++ b/subscriptions.info.yml
@@ -1,13 +1,19 @@
-name: Subs
+name: Subscriptions
 type: profile
 description: 'Build a custom site without pre-configured functionality. Suitable for advanced users.'
 version: VERSION
 core: 8.x
+
+distribution:
+  name: Subscriptions
+
 dependencies:
   - node
   - block
   - dblog
   - page_cache
   - dynamic_page_cache
+
 themes:
   - stark
+
