--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,19 @@
 {
     "name": "dennisdigital/subscriptions_suite",
     "description": "Subscriptions Suite",
-    "type": "drupal-profile",
+    "type": "drupal-module",
     "license": "GPL-2.0+",
     "minimum-stability": "dev",
     "prefer-stable": true,
-
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.drupal.org/8"
-        }
-    ],
 
     "extra": {
         "patches": {
         }
     },
 
-    "require-dev": {
-        "drush/drush": "^9.0",
-        "phpunit/phpunit": "~4.8",
-        "squizlabs/php_codesniffer": "2.*",
-        "drupal/devel": "^1.0"
-    },
-
     "require": {
-        "drupal/core": "^8.1.0",
-        "drupal/ctools": "3.0-alpha26",
-        "drupal/config_update": "^1.1",
-        "drupal/metatag": "^1.0",
-        "drupal/token": "^1.0",
-        "drupal/pathauto": "^1.0",
         "drupal/domain": "^1.0",
         "drupal/paragraphs": "^1.0"
     }
 }
+
