--- a/subscriptions_suite.info.yml
+++ b/subscriptions_suite.info.yml
@@ -1,11 +1,8 @@
-name: Subscriptions
+name: Subscriptions Suite
 type: module
 description: 'Subscriptions Suite and related modules.'
 version: VERSION
 core: 8.x
-
-distribution:
-  name: Subscriptions
 
 dependencies:
   - domain
