--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     },
 
     "require": {
-        "drupal/domain: "1.0.0-alpha6",
+        "drupal/domain": "1.0.0-alpha6",
         "drupal/paragraphs": "^1.0"
     }
 }
