Case 26672. Added config_token module.

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
 
     "require": {
         "drupal/token_filter": "1.0.0-beta1",
+        "drupal/config_token": "8.x-dev#14098e2556637964d42b13deb647cd0ed4760ede",
         "drupal/domain": "1.0.0-alpha6",
         "drupal/paragraphs": "^1.0"
     }
