--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
 
     "require": {
-        "drupal/domain": "1.0.0-alpha6",
+        "drupal/domain": "dev-8.x",
         "drupal/paragraphs": "^1.0",
         "drupal/google_tag": "1.x-dev"
     }
