--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
 
     "require": {
         "drupal/domain": "1.0.0-alpha6",
-        "drupal/paragraphs": "^1.0",
-        "drupal/google_tag": "1.x-dev"
+        "drupal/paragraphs": "^1.0"
     }
 }
 
