--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 
     "require": {
         "drupal/domain": "1.0.0-alpha6",
-        "drupal/paragraphs": "^1.0"
+        "drupal/paragraphs": "^1.0",
+        "drupal/google_tag": "1.x-dev#f1070d51ba4b37afd70b0d8efbf138099061f79b"
     }
 }
 
